istio/kiali-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-ingress
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/http-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: kiali.istio-system.svc.cluster.local
